--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "json-server --watch data/cities.json port 3000 --delay 500"
+    "server": "json-server --watch data/cities.json --port 9000 --delay 500"
   },
   "dependencies": {
-    "hooks": "^0.3.2",
     "json-server": "^0.17.3",
-    "leaflet": "^1.9.4",
-    "prop-types": "^15.8.1",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
-    "react-datepicker": "^4.18.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.9.0"
@@ -28,10 +26,5 @@
     "eslint-config-react-app": "^7.0.1",
     "vite": "^4.2.0",
     "vite-plugin-eslint": "^1.8.1"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "vite.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
